# labonneboite

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  Makefile_old  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.testing.yml  docker-compose.yml  dpae.sql  dpae_statistics.sql  etablissements_importer.sql  mkdocs.yml  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  run.sh  setup.cfg  setup.py  setup.sh  sonar-project.properties  test_fichier.txt  testficher
.github/workflows/: lbb-ci.yml  test.yaml  tests.yml
ROME_NAF/: README.md  copy_mapping.sh  decoupage_ROME.txt  decoupage_manuel_ROME.txt  ogr_rome_codes.csv  pip_freeze_output.txt  requirements.txt  requirements_rome_naf.txt  romebis_labels.csv  tableau_LBB_ROMEbis.csv
ROME_NAF/analyses/: analyses_ROME1_CDI_CDD.ipynb  analyses_ROME1_ETT.ipynb  analyses_ROME1_fusion.ipynb  analyses_ROME2_CDD_CDI.ipynb  analyses_ROME2_ETT.ipynb  analyses_offres.ipynb  print_array.py
ROME_NAF/documentation/: Referentiels Extracts LBB.xlsx  Structure Tables  DPAE et  PROFILPRO.xlsx
ROME_NAF/editorialisation/: ROME_D1106.ipynb  decoupage_ROME.ipynb  editorialisation.ipynb  meta_OGR.ipynb  output_to_production.ipynb  parsing_decoupage_ROME.ipynb  seuillage.ipynb  tableau_LBB.ipynb
ROME_NAF/groupby/: fusion_DPAE.ipynb  groupby_DPAE_CDI_CDD.ipynb  groupby_DPAE_ETT.ipynb  groupby_offres.ipynb
ROME_NAF/opendata/: count_SIRENE.ipynb  opendata.ipynb
ROME_NAF/preparation/: DPAE.ipynb  ETT.ipynb  clean.sh  clean_DPAE.ipynb  clean_ETT.ipynb  clean_offres.ipynb  offres.ipynb
ROME_NAF/referentiels/: referentiels.ipynb  referentiels.py
ROME_NAF/referentiels/referentiel_NAF/: naf2008_liste_n5.csv  naf2008_liste_n5_nouveau_header.csv
ROME_NAF/referentiels/referentiel_OGR/: 20150921_arboprincipale28427_OGR.csv  liste_OGR.csv  liste_OGR_prep.csv
ROME_NAF/referentiels/referentiel_ROME/: 20150921_arboprincipale28427.ods  20150921_arboprincipale28427.xls  20150921_arboprincipale28427_OGR_tmp.csv  20150921_arboprincipale28427_ROME.csv  20150921_arboprincipale28427_ROME_tmp.csv  domaine_2016_12.csv  famille_2015_09.csv  liste_ROME.csv  liste_ROME_avec_slug.csv  liste_code_rome.ods  rome_arboprincipale-dec2016.xls44582.xlsx
docker/: README.md  docker-compose.tests.yml  docker-compose.yml  redis.conf  uwsgi.ini
docker/redis/: .gitignore  docker-compose.yml  redis.conf  sentinel.conf.orig
docker/v3.10/: Dockerfile  requirements.txt  setup.py
docker/v3.10/entrypoints/: index.sh  run.sh  test.sh
docker/v3.6/: Dockerfile  requirements.txt  setup.py
docs/: algo.md  ami-api-csp.md  code-profiling.md  index.md  ogr-rome-mapping.md  randomization.md
labonneboite/: .coverage  alembic.ini  conf.py  create_index.py.lprof  run.sh  wsgi-conf.py  wsgi.py
labonneboite/alembic/: README.md  env.py  script.py.mako
labonneboite/alembic/sql/: etablissements.sql  etablissements_final.sql  etablissements_initial.sql  etablissements_tests_selenium.sql  initial_etablissements_admin_remove.sql  initial_etablissements_admin_update.sql  test.sql
labonneboite/alembic/versions/: 013a2cb893fc_add_flag_pmsmp_and_flag_afpr_poe.py  025bcb5f723e_update_index_for_office_offer_matching.py  0592646101eb_create_geolocations_and_etablissements_backoffice.py  0592646101eb_create_two_more_importer_tables.py  090e86dfc304_add_reason_column.py  0da6b26c212f_create_contact_form_table.py  1124e80be448_add_new_romes_to_boost_column.py  1124e80be448_modify_etablissements_admin_update.py  11fc7f39f7fc_create_email_alternance_column.py  200d176f96b6_harmonize_indexes.py  2271209bf40f_allow_empty_alternance_email_in_save_as_.py  240900fabe59_create_importer_tables.py  2426e6b89deb_switch_to_utf8mb4.py  29cdae903fb3_create_third_party_admin_save_table.py  2aca2291700f_add_social_network_link_in_office.py  2df1845b3dc5_add_alternate_index_for_offers_on_.py  2e6781936bae_drop_irrelevant_etablissements_raw_.py  33e80a1c96e0_add_index_on_dpae_departement.py  36188da1a919_allow_empty_alternance_email_in_save.py  38fad89a549c_create_remove_flag_alternance_in_office_.py  39042f1317e3_update_etablissements_backoffice_table.py  3a70adf06a8_add_boost_global_or_by_for_rome_for_.py  4041eac5f52f_create_phone_alternance_and_website.py  (+41 more)
labonneboite/common/: activity.py  autocomplete.py  chunks.py  constants.py  contact_mode.py  crypto.py  csv.py  database.py  departements.py  doorbell.py  email_util.py  encoding.py  env.py  es.py  esd.py  fetcher.py  geocoding.py  get_full_adress.py  hiring_type_util.py  hotjar.py  load_data.py  locations.py  mailjet.py  mapping.py  offers.py  pagination.py  pdf.py  pools.py  pro.py  refresh_peam_token.py  rome_mobilities.py  scope.py  scoring.py  search.py  siret.py  sortedcollection.py  sorting.py  test_get_full_adress.py  user_info.py  user_util.py  (+2 more)
labonneboite/conf/: __init__.py
labonneboite/db/: etablissements_backoffice.sql  etablissements_main_db.sql
labonneboite/doc/: README-algo.md  README-code-profiling.md  README-load-testing.md  README-rome-naf-mapping.md
labonneboite/entrypoints/: test.sh
labonneboite/importer/: compute_score.py  debug.py  jenkins.py  sanity.py  settings.py  util.py
labonneboite/scripts/: cbs_to_save.py  create_index.py  create_sitemap.py  get_signed_api_url.py  loadtesting.py  maj_rome.py  manage_third_party_updates.py  nb_hirings_per_company_per_rome.py  prepare_mailing_data.py  rebuild_simplified_rome_naf_mapping.py  update_metiers_tension.py
labonneboite/tests/: conftest.py  docker-compose.db.yml  run.sh  test_base.py
labonneboite/web/: __init__.py  app.py  config.py  pagination.py  templates_functions.py  utils.py
old/: analysys.txt  requirements.dev.txt  requirements.txt  setup.py
todo_build_migrations/: flag_alternance.sql  import_tasks.sql
vagrant/: Vagrantfile  elasticsearch.config.yml  elasticsearch.yml  labonneboite_dev_etablissements.sql  labonneboite_test.sql  playbook.yml  vars.yml
vagrant/mysql/: lbb_utf8mb4.cnf  my.cnf
(+538 files in other folders)
