[tool.poetry]
name = "LaBonneBoite"
version = "0.1.0"
description = ""
authors = ["La Bonne Boite <labonneboite@pole-emploi.fr>"]
license  = "GPL-3.0-only"
keywords = ["labonneboite"]
readme = "README.md"
packages = [
    { include = "labonneboite" }
]
repository = "https://github.com/StartupsPoleEmploi/labonneboite-common"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
[tool.poetry.scripts]
create_index = "labonneboite.scripts.create_index:run"


[tool.poetry.dependencies]
python = "^3.10"
labonneboite_common = "^0.3.0"

alembic = "^1.8.1"
# arabic-reshaper = "^2.1.4"
# asn1crypto = "^1.5.1"
# astroid = "^2.12.10"
# asttokens = "^2.0.8"
async_generator = "^1.10"
# attrs = "^22.1.0"
Babel = "^2.10.3"
# backcall = "^0.2.0"
# blinker = "^1.5"
Brotli = "^1.0.9"
# build = "^0.8.0"
cachetools = "^5.2.0"
# certifi = "^2022.9.24"
# cffi = "^1.15.1"
# charset-normalizer = "^2.1.1"
# click = "^8.1.3"
# ConfigArgParse = "^1.5.3"
# cryptography = "^38.0.1"
cssmin = "^0.2.0"
# cssselect2 = "^0.7.0"
# decorator = "^5.1.1"
# defusedxml = "^0.7.1"
# dill = "^0.3.5.1"
dnspython = "^2.2.1"
# ecdsa = "^0.18.0"
elasticsearch = "^8.4.2"
email-validator = "^1.2.1"
# executing = "^1.1.0"
Flask = "^2.2.2"
Flask-Admin = "^1.6.0"
Flask-Assets = "^2.0"
Flask-BabelEx = "^0.9.4"
Flask-BasicAuth = "^0.2.0"
Flask-Cors = "^3.0.10"
Flask-DebugToolbar = "^0.13.1"
Flask-Login = "^0.6.2"
Flask-Script = "^2.0.6"
Flask-Testing = "^0.8.1"
Flask-WTF = "^1.0.1"
# future = "^0.18.2"
geographiclib = "^1.52"
gevent = "^21.12.0"
geventhttpclient = "^2.0.2"
# google-api-core = "^2.10.1"
google-api-python-client = "^2.58.0"
# google-auth = "^2.11.1"
# google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.2"
googleapis-common-protos = "^1.56.4"
# greenlet = "^1.1.3"
# h11 = "^0.14.0"
# html5lib = "^1.1"
# httplib2 = "^0.20.4"
# idna = "^3.4"
# ipdb = "^0.13.9"
# ipython = "^8.5.0"
# isort = "^5.10.1"
# itsdangerous = "^2.1.2"
# jedi = "^0.18.1"
# Jinja2 = "^3.1.2"
jsmin = "^3.0.1"
# lazy-object-proxy = "^1.7.1"
line-profiler = "^3.5.1"
# locust = "^2.12.1"
# lxml = "^4.9.1"
mailjet-rest = "^1.3.4"
# Mako = "^1.2.3"
# MarkupSafe = "^2.1.1"
# matplotlib-inline = "^0.1.6"
# mccabe = "^0.7.0"
# msgpack = "^1.0.4"
numpy = "^1.23.2"
# oauthlib = "^3.2.1"
# oscrypto = "^1.3.0"
# outcome = "^1.2.0"
# packaging = "^21.3"
pandas = "^1.4.4"
parameterized = "^0.8.1"
# parso = "^0.8.3"
# pep517 = "^0.13.0"
# pexpect = "^4.8.0"
# pickleshare = "^0.7.5"
# Pillow = "^9.2.0"
# pip-tools = "^6.8.0"
# platformdirs = "^2.5.2"
# prompt-toolkit = "^3.0.31"
# protobuf = "^4.21.6"
# psutil = "^5.9.2"
# ptyprocess = "^0.7.0"
# pure-eval = "^0.2.2"
# pyasn1 = "^0.4.8"
# pyasn1-modules = "^0.2.8"
# pycparser = "^2.21"
# Pygments = "^2.13.0"
# pyHanko = "^0.14.0"
# pyhanko-certvalidator = "^0.19.5"
# PyJWT = "^2.5.0"
# pylint = "^2.15.3"
# pyparsing = "^3.0.9"
# PyPDF3 = "^1.0.6"
pyprof2calltree = "^1.4.5"
# PySocks = "^1.7.1"
# python-bidi = "^0.4.2"
python-dateutil = "^2.8.2"
# python-jose = "^3.3.0"
python-slugify = "^6.1.2"
# python3-openid = "^3.2.0"
# pytz = "^2022.2.1"
# pytz-deprecation-shim = "^0.1.0.post0"
# PyVirtualDisplay = "^3.0"
# PyYAML = "^6.0"
# pyzmq = "^24.0.1"
# qrcode = "^7.3.1"
raven = {extras = ["flask"], version = "^6.10.0"}
# remote-pdb = "^2.1.0"
# reportlab = "^3.6.11"
requests = "^2.28.1"
# requests-oauthlib = "^1.3.1"
# roundrobin = "^0.0.4"
# rsa = "^4.9"
# selenium = "^4.4.3"
sentry-sdk = "^1.9.8"
# six = "^1.16.0"
# sniffio = "^1.3.0"
social-auth-app-flask = "^1.0.0"
social-auth-app-flask-sqlalchemy = "^1.0.1"
social-auth-core = {extras = ["openidconnect"], version = "^4.2.0"}
# sortedcontainers = "^2.4.0"
speaklater = "^1.3"
sqlalchemy = "^1.3.24"
sqlalchemy-utils = "^0.38.3"
# stack-data = "^0.5.1"
# svglib = "^1.4.1"
# text-unidecode = "^1.3"
# tinycss2 = "^1.1.1"
# toml = "^0.10.2"
# # tomli = "^2.0.1"
# tomlkit = "^0.11.4"
# tqdm = "^4.64.1"
# traitlets = "^5.4.0"
# trio = "^0.21.0"
# trio-websocket = "^0.9.2"
# typing-extensions = "^4.3.0"
# tzdata = "^2022.2"
# tzlocal = "^4.2"
# Unidecode = "^1.3.4"
# uritemplate = "^4.1.1"
# uritools = "^4.0.0"
# urllib3 = {extras = ["socks"], version = "^1.26.12"}
uWSGI = "^2.0.20"
uwsgitop = "^0.11"
validators = "^0.20.0"
# wcwidth = "^0.2.5"
# webassets = "^2.0"
# webencodings = "^0.5.1"
# Werkzeug = "^2.2.2"
# wheel = "^0.37.1"
# wrapt = "^1.14.1"
# wsproto = "^1.2.0"
WTForms = "^3.0.1"
xhtml2pdf = "^0.2.8"
zipp = "^3.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
flake8 = "^5.0.4"
flake8-junit-report = "^2.1.0"
coverage = "^6.4.4"
locust = "^2.12.1" # not sure

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

